html table done, server get data from data manager

--- a/templates/list.html
+++ b/templates/list.html
@@ -5,6 +5,16 @@
     <title>List Quesstions</title>
 </head>
 <body>
+    <h1>Questions:</h1>
+    <table>
+        {%for items in list_of_questions%}
+        <tr>
+            {%for value in items.values()%}
+            <td>{{value}}</td>
+            {%endfor%}
+        </tr>
+        {%endfor%}
+    </table>
 
 </body>
 </html>
