html table corrected, server get data from connection, connection get data from data manager

--- a/templates/list.html
+++ b/templates/list.html
@@ -6,15 +6,13 @@
 </head>
 <body>
     <h1>Questions:</h1>
-    <table>
-        {%for items in list_of_questions%}
-        <tr>
-            {%for value in items.values()%}
-            <td>{{value}}</td>
-            {%endfor%}
-        </tr>
+    <lo>
+        {%for item in list_of_questions%}
+        <li>
+            {{item}}
+        </li>
         {%endfor%}
-    </table>
+    </lo>
 
 </body>
 </html>
