--- a/templates/list.html
+++ b/templates/list.html
@@ -13,6 +13,10 @@
         </li>
         {%endfor%}
     </ol>
-
+    <h2>Ask a question:</h2>
+    <form action="" method="get">
+    <input type="text" name="askedquestion"><br>
+    </form>
+    <button type="submit" value="Submit">Send!</button>
 </body>
 </html>
