--- a/templates/list.html
+++ b/templates/list.html
@@ -14,9 +14,23 @@
         {%endfor%}
     </ol>
     <h2>Ask a question:</h2>
+    <table>
     <form action="" method="get">
-    <input type="text" name="askedquestion"><br>
+
+    <tr>
+        <td>Title:</td>
+        <td><input type="text" name="askedquestiontitle" min="5" max="100" size="30"></td>
+    </tr>
+    <tr>
+        <td>Message:</td>
+        <td><textarea name="askedquestionmessage" rows="10" cols="30" min="10" max="500">Maximum 500 character.</textarea></td>
+    </tr>
+    <tr>
+        <td>Image:</td>
+        <td><input type="file" name="askedquestionimage"></td>
+    </tr>
     </form>
+    </table>
     <button type="submit" value="Submit">Send!</button>
 </body>
 </html>
