--- a/templates/list.html
+++ b/templates/list.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>List Quesstions</title>
+    <title>List Questions</title>
 </head>
 <body>
     <h1>Questions:</h1>
@@ -13,24 +13,6 @@
         </li>
         {%endfor%}
     </ol>
-    <h2>Ask a question:</h2>
-    <table>
-    <form action="" method="get">
-
-    <tr>
-        <td>Title:</td>
-        <td><input type="text" name="askedquestiontitle" min="5" max="100" size="30"></td>
-    </tr>
-    <tr>
-        <td>Message:</td>
-        <td><textarea name="askedquestionmessage" rows="10" cols="30" min="10" max="500">Maximum 500 character.</textarea></td>
-    </tr>
-    <tr>
-        <td>Image:</td>
-        <td><input type="file" name="askedquestionimage"></td>
-    </tr>
-    </form>
-    </table>
-    <button type="submit" value="Submit">Send!</button>
+    <a href="/add-question">Ask a question.</a>
 </body>
 </html>
