--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Ask a question:</h1>
     <table>
-    <form action="" method="get">
+    <form action="" method="post">
 
     <tr>
         <td>Title:</td>
@@ -23,6 +23,6 @@
     </tr>
     </form>
     </table>
-    <button type="submit" value="Submit">Send!</button>
+    <button type="submit">Send!</button>
 </body>
 </html>
