--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -11,18 +11,21 @@
 
     <tr>
         <td>Title:</td>
-        <td><input type="text" name="askedquestiontitle" min="5" max="100" size="30"></td>
+        <td><input type="text" name="title" min="5" max="100" size="30"></td>
     </tr>
     <tr>
         <td>Message:</td>
-        <td><textarea name="askedquestionmessage" rows="10" cols="30" min="10" max="500">Maximum 500 character.</textarea></td>
+        <td><textarea name="message" rows="10" cols="30" min="10" max="500">Maximum 500 character.</textarea></td>
     </tr>
     <tr>
         <td>Image:</td>
-        <td><input type="file" name="askedquestionimage"></td>
+        <td><input type="file" name="image"></td>
+    </tr>
+    <tr>
+        <td><button type="submit">Send!</button></td>
     </tr>
     </form>
     </table>
-    <button type="submit">Send!</button>
+
 </body>
 </html>
