--- a/templates/list.html
+++ b/templates/list.html
@@ -9,7 +9,7 @@
     <ol>
         {%for item in list_of_questions%}
         <li>
-            <a href="questions/{{loop.index0}}">{{item}}</a>
+            <a href="questions/{{ list_of_ids[loop.index0] }}">{{item}}</a>
         </li>
         {%endfor%}
     </ol>
