Add new answer feature

--- a/templates/question.html
+++ b/templates/question.html
@@ -44,6 +44,6 @@
         </tr>
         {%endfor%}
     </table>
-
+<a href="/questions/{{question_id}}/new-answer"> Add answer</a>
 </body>
 </html>
