Add menu buttons

--- a/templates/add-answer.html
+++ b/templates/add-answer.html
@@ -20,7 +20,8 @@
         <td><button type="submit">Send!</button></td>
     </tr>
     </form>
-    </table>
+    </table><br>
+    <a href="/questions/{{question_id}}"> <button type="button">Back to questions.</button></a>
 
 </body>
 </html>
