--- a/templates/list.html
+++ b/templates/list.html
@@ -13,6 +13,6 @@
         </li>
         {%endfor%}
     </ol>
-    <a href="/add-question">Ask a question.</a>
+    <a href="/add-question"><button type="button">Ask a question!</button></a>
 </body>
 </html>
