--- a/templates/question.html
+++ b/templates/question.html
@@ -43,7 +43,8 @@
             {%endfor%}
         </tr>
         {%endfor%}
-    </table>
-<a href="/questions/{{question_id}}/new-answer"> Add answer</a>
+    </table><br>
+<a href="/questions/{{question_id}}/new-answer"> <button type="button">Add answer!</button></a><br>
+<a href="/"> <button type="button">Back to questions.</button></a>
 </body>
 </html>
