--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -25,7 +25,7 @@
         <td><button type="submit">Send!</button></td>
     </tr>
     </form>
-    </table>
-
+    </table><br>
+    <a href="/"> <button type="button">Back to questions.</button></a>
 </body>
 </html>
