--- a/templates/question.html
+++ b/templates/question.html
@@ -46,5 +46,6 @@
     </table><br>
 <a href="/questions/{{question_id}}/new-answer"> <button type="button">Add answer!</button></a><br>
 <a href="/"> <button type="button">Back to questions.</button></a>
+<a href="/questions/{{question_id}}/delete"> <button type="button">Delete questions.</button></a>
 </body>
 </html>
