Made reformat code in files

--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -6,26 +6,31 @@
 </head>
 <body>
 <h1>Ask a question:</h1>
-    <table>
+<table>
     <form action="" method="post">
 
-    <tr>
-        <td>Title:</td>
-        <td><input type="text" name="title" min="5" max="100" size="30"></td>
-    </tr>
-    <tr>
-        <td>Message:</td>
-        <td><textarea name="message" rows="10" cols="30" min="10" max="500">Maximum 500 character.</textarea></td>
-    </tr>
-    <tr>
-        <td>Image:</td>
-        <td><input type="file" name="image"></td>
-    </tr>
-    <tr>
-        <td><button type="submit">Send!</button></td>
-    </tr>
+        <tr>
+            <td>Title:</td>
+            <td><input type="text" name="title" min="5" max="100" size="30"></td>
+        </tr>
+        <tr>
+            <td>Message:</td>
+            <td><textarea name="message" rows="10" cols="30" min="10" max="500">Maximum 500 character.</textarea></td>
+        </tr>
+        <tr>
+            <td>Image:</td>
+            <td><input type="file" name="image"></td>
+        </tr>
+        <tr>
+            <td>
+                <button type="submit">Send!</button>
+            </td>
+        </tr>
     </form>
-    </table><br>
-    <a href="/"> <button type="button">Back to questions.</button></a>
+</table>
+<br>
+<a href="/">
+    <button type="button">Back to questions.</button>
+</a>
 </body>
 </html>
