--- a/templates/list.html
+++ b/templates/list.html
@@ -5,14 +5,16 @@
     <title>List Questions</title>
 </head>
 <body>
-    <h1>Questions:</h1>
-    <ol>
-        {%for item in list_of_questions%}
+<h1>Questions:</h1>
+<ol>
+    {% for item in list_of_questions %}
         <li>
-            <a href="questions/{{ list_of_ids[loop.index0] }}">{{item}}</a>
+            <a href="questions/{{ list_of_ids[loop.index0] }}">{{ item }}</a>
         </li>
-        {%endfor%}
-    </ol>
-    <a href="/add-question"><button type="button">Ask a question!</button></a>
+    {% endfor %}
+</ol>
+<a href="/add-question">
+    <button type="button">Ask a question!</button>
+</a>
 </body>
 </html>
