--- a/templates/list.html
+++ b/templates/list.html
@@ -7,9 +7,9 @@
 <body>
 <h1>Questions:</h1>
 <ol>
-    {% for item in list_of_questions %}
+    {% for question in list_of_questions %}
         <li>
-            <a href="questions/{{ list_of_ids[loop.index0] }}">{{ item }}</a>
+            <a href="{{ url_for('route_question', question_id=question.id) }}">{{ question.title }}</a>
         </li>
     {% endfor %}
 </ol>
