add answer to question function

--- a/templates/question.html
+++ b/templates/question.html
@@ -9,7 +9,7 @@
 <table border="1">
     <tr align="center">
         <td>ID</td>
-        <td>Subsmisson time</td>
+        <td>Submission time</td>
         <td>View number</td>
         <td>Vote number</td>
         <td>Title</td>
@@ -30,7 +30,7 @@
 <table border="1">
     <tr align="center">
         <td>ID</td>
-        <td>Subsmisson time</td>
+        <td>Submission time</td>
         <td>Vote number</td>
         <td>Question ID</td>
         <td>Message</td>
