get a search bar in HTML

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Latest Questions</title>
@@ -19,5 +19,15 @@
 <a href="/list">
     <button type="button">All questions</button>
 </a>
+<p>
+<p class="wrap">
+   <div class="search">
+      <input type="text" class="searchTerm" placeholder="What are you looking for?">
+      <button type="submit" class="searchButton">Search</button>
+        <i class="fa fa-search"></i>
+     </button>
+   </div>
+</p>
+</div>
 </body>
 </html>
