--- a/templates/list.html
+++ b/templates/list.html
@@ -16,5 +16,14 @@
 <a href="/add-question">
     <button type="button">Ask a question!</button>
 </a>
+
+<div class="wrap">
+   <div class="search">
+      <input type="text" class="searchTerm" placeholder="What are you looking for?">
+      <button type="submit" class="searchButton">
+        <i class="fa fa-search"></i>
+     </button>
+   </div>
+</div>
 </body>
 </html>
