After review version(Not working correctly)

--- a/templates/edit-answer.html
+++ b/templates/edit-answer.html
@@ -21,7 +21,7 @@
     </tr>
     </form>
     </table><br>
-    <a href="/list"> <button type="button">Back to questions.</button></a>
+    <a href="/questions/{{ answer.question_id }}"> <button type="button">Back to questions.</button></a>
 
 </body>
 </html>
