--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add new question</title>
+    <link rel="stylesheet" type="text/css" href="static/design.css">
 </head>
 <body>
 <h1>Ask a question:</h1>
@@ -23,14 +24,14 @@
         </tr>
         <tr>
             <td>
-                <button type="submit">Send!</button>
+                <button type="submit" class="myButton">Send!</button>
             </td>
         </tr>
     </form>
 </table>
 <br>
 <a href="/">
-    <button type="button">Back to questions.</button>
+    <button type="button" class="myButton">Back to questions.</button>
 </a>
 </body>
 </html>
