Add sort questions function

--- a/templates/list.html
+++ b/templates/list.html
@@ -17,6 +17,25 @@
     <button type="button">Ask a question!</button>
 </a>
 
+<a href="/list?criteria=submission_time&direction=ASC">
+    <button type="button">Time A</button>
+</a>
+<a href="/list?criteria=submission_time&direction=DEC">
+    <button type="button">Time D</button>
+</a>
+<a href="/list?criteria=vote_number&direction=ASC">
+    <button type="button">Vote number A</button>
+</a>
+<a href="/list?criteria=vote_number&direction=DESC">
+    <button type="button">Vote number D</button>
+</a>
+<a href="/list?criteria=view_number&direction=ASC">
+    <button type="button">View number A</button>
+</a>
+<a href="/list?criteria=view_number&direction=DESC">
+    <button type="button">View number D</button>
+</a>
+
 <div class="wrap">
    <div class="search">
       <input type="text" class="searchTerm" placeholder="What are you looking for?">
