--- a/templates/add-answer.html
+++ b/templates/add-answer.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Add new answer</title>
+    <link rel="stylesheet" type="text/css" href="/static/design.css">
+
 </head>
 <body>
 <h1>Add answer:</h1>
