--- a/templates/list.html
+++ b/templates/list.html
@@ -15,7 +15,7 @@
     {% endfor %}
 </ol>
 <a href="/add-question">
-    <button type="button" class="myButton">Ask a question!</button>
+    <button type="button" class="button">Ask a question!</button>
 </a>
 
 <div class="wrap">
