--- a/templates/edit-answer.html
+++ b/templates/edit-answer.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Editing answer</title>
+    <link rel="stylesheet" type="text/css" href="/static/design.css"/>
+
 </head>
 <body>
 <h1>Edit answer:</h1>
