--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Latest Questions</title>
+    <link rel="stylesheet" type="text/css" href="/static/design.css">
+
 </head>
 <body>
 <h1>Questions:</h1>
