--- a/templates/question.html
+++ b/templates/question.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Display a question</title>
-    <link rel="stylesheet" type="text/css" href="static/design.css">
+    <link rel="stylesheet" type="text/css" href="/static/design.css">
 </head>
 <body>
-<h1>Questions:</h1>
+<h1>Question:</h1>
 <table border="1">
     <tr align="center">
-        <td>ID</td>
-        <td>Submission time</td>
-        <td>View number</td>
-        <td>Vote number</td>
-        <td>Title</td>
-        <td>Message</td>
-        <td>Image</td>
+        <th>ID</th>
+        <th>Submission time</th>
+        <th>View number</th>
+        <th>Vote number</th>
+        <th>Title</th>
+        <th>Message</th>
+        <th>Image</th>
     </tr>
     <tr>
         {% for item in question_data %}
@@ -27,39 +27,38 @@
         {% endfor %}
     </tr>
 </table>
-<h1>Answers:</h1>
+<h2>Answers:</h2>
 <table border="1">
     <tr align="center">
-        <td>ID</td>
-        <td>Submission time</td>
-        <td>Vote number</td>
-        <td>Question ID</td>
-        <td>Message</td>
-        <td>Image</td>
-        <td> </td>
+        <th>ID</th>
+        <th>Submission time</th>
+        <th>Vote number</th>
+        <th>Question ID</th>
+        <th>Message</th>
+        <th>Image</th>
+        <th> </th>
     </tr>
     {% for item in answers_data %}
     <tr>
         {% for data in item.values() %}
-        <td align="center">
+        <td align="center" class="topborder">
             {{ data }}
         </td>
         {% endfor %}
-        <td>
-            <a href="/answer/{{ item.id }}/edit"><button type="button">Edit answer!</button></a>
+        <td class="topborder">
+            <a href="/answer/{{ item.id }}/edit"><button type="button" class="button">Edit answer!</button></a>
         </td>
     </tr>
     {% endfor %}
 </table>
-<br>
 <a href="/questions/{{ question_id }}/new-answer">
-    <button type="button" class="myButton">Add answer!</button>
-</a><br>
+    <button type="button" class="button">Add answer!</button>
+</a>
 <a href="/list">
-    <button type="button" class="myButton">Back to questions.</button>
+    <button type="button" class="button">Back to questions.</button>
 </a>
 <a href="/questions/{{ question_id }}/delete">
-    <button type="button" class="myButton">Delete questions.</button>
+    <button type="button" class="button">Delete questions.</button>
 </a>
 </body>
 </html>
