Serch  box added to home HTML, made search html, data_manager fixed and got search_ data, server got search

--- a/templates/home.html
+++ b/templates/home.html
@@ -22,14 +22,12 @@
     <button type="button">All questions</button>
 </a>
 <p>
-<p class="wrap">
-   <div class="search">
-      <input type="text" class="searchTerm" placeholder="What are you looking for?">
-      <button type="submit" class="searchButton">Search</button>
-        <i class="fa fa-search"></i>
-     </button>
-   </div>
+    <form action="/search" method="get" >
+    <input type="text" name="search_box" placeholder="What are you looking for?">
+    <button type="submit">Search</button></a>
+    </form>
+
+
 </p>
-</div>
 </body>
 </html>
