--- a/templates/edit-answer.html
+++ b/templates/edit-answer.html
@@ -23,7 +23,7 @@
     </tr>
     </form>
     </table><br>
-    <a href="/questions/{{ answer.question_id }}"> <button type="button">Back to questions.</button></a>
+    <a href="/questions/{{answer.question_id}}.html"> <button type="button">Back to questions.</button></a>
 
 </body>
 </html>
