--- a/templates/delete-question.html
+++ b/templates/delete-question.html
@@ -6,13 +6,11 @@
     <link rel="stylesheet" type="text/css" href="/static/design.css">
 
 </head>
-<body>
+<a>
     Do you really want to delete this question?
-    <form action="" method="post">
-    <input type="checkbox" name="delete_question" checked>Delete question</input>
-    <button type="submit" class="button">Really?</button>
-    </form>
-    <a href="/questions/{{question_id}}"> <button type="button" class="button">Back to question</button></a>
+    <br>
+    <a href="/questions/{{question_id}}/delete?confirm=True"><button type="submit" class="button">YES</button></a>
+    <a href="/questions/{{question_id}}"> <button type="button" class="button">NO</button></a>
 
 </body>
 </html>
