--- a/templates/add-answer.html
+++ b/templates/add-answer.html
@@ -12,7 +12,7 @@
     <form action="" method="post">
     <tr>
         <td>Message:</td>
-        <td><textarea name="message" rows="10" cols="30" min="10" max="500">Maximum 500 character.</textarea></td>
+        <td><textarea name="message" rows="10" cols="30" min="10" max="500" placeholder="Maximum 500 character."></textarea></td>
     </tr>
     <tr>
         <td>Image:</td>
