--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -16,7 +16,7 @@
         </tr>
         <tr>
             <td>Message:</td>
-            <td><textarea name="message" rows="10" cols="30" min="10" max="500">Maximum 500 character.</textarea></td>
+            <td><textarea name="message" rows="10" cols="30" min="10" max="500" placeholder="Maximum 500 character."></textarea></td>
         </tr>
         <tr>
             <td>Image:</td>
