--- a/templates/home.html
+++ b/templates/home.html
@@ -15,19 +15,19 @@
         </li>
     {% endfor %}
 </ol>
+<div class="aligin-center">
 <a href="/add-question">
-    <button type="button">Ask a question!</button>
+    <button type="button" class="button">Ask a question!</button>
 </a>
 <a href="/list">
-    <button type="button">All questions</button>
+    <button type="button" class="button">All questions</button>
 </a>
+</div>
 <p>
     <form action="/search" method="get" >
     <input type="text" name="search_box" placeholder="What are you looking for?">
     <button type="submit">Search</button></a>
     </form>
-
-
 </p>
 </body>
 </html>
