--- a/templates/question.html
+++ b/templates/question.html
@@ -51,6 +51,7 @@
     </tr>
     {% endfor %}
 </table>
+<div class="aligin-center">
 <a href="/questions/{{ question_id }}/new-answer">
     <button type="button" class="button">Add answer!</button>
 </a>
@@ -60,9 +61,6 @@
 <a href="/questions/{{ question_id }}/delete">
     <button type="button" class="button">Delete questions.</button>
 </a>
-
-
-
-
+</div>
 </body>
 </html>
