--- a/templates/search.html
+++ b/templates/search.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link rel="stylesheet" type="text/css" href="/static/design.css"/>
+
 </head>
 <body>
     <h1>Search Results:</h1>
