--- a/templates/add-answer.html
+++ b/templates/add-answer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Add new answer</title>
     <link rel="stylesheet" type="text/css" href="/static/design.css">
-
+    <link rel="shortcut icon" href="/static/logo.ico" />
 </head>
 <body>
 <h1>Add answer:</h1>
