--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Add new question</title>
     <link rel="stylesheet" type="text/css" href="/static/design.css"/>
+    <link rel="shortcut icon" href="/static/logo.ico" />
 </head>
 <body>
 <h1>Ask a question:</h1>
