--- a/templates/delete-question.html
+++ b/templates/delete-question.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Delete question</title>
     <link rel="stylesheet" type="text/css" href="/static/design.css">
+    <link rel="shortcut icon" href="/static/logo.ico" />
 
 </head>
 <a>
