--- a/templates/edit-answer.html
+++ b/templates/edit-answer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Editing answer</title>
     <link rel="stylesheet" type="text/css" href="/static/design.css"/>
-
+    <link rel="shortcut icon" href="/static/logo.ico" />
 </head>
 <body>
 <h1>Edit answer:</h1>
