--- a/templates/home.html
+++ b/templates/home.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <title>Latest Questions</title>
     <link rel="stylesheet" type="text/css" href="/static/design.css">
-
+    <link rel="shortcut icon" href="/static/logo.ico" />
 </head>
 <body>
-<h1>Questions:</h1>
-<ol>
-    {% for question in list_of_questions %}
-        <li>
-            <a href="{{ url_for('route_question', question_id=question.id) }}">{{ question.title }}</a>
-        </li>
-    {% endfor %}
-</ol>
-<div class="aligin-center">
-<a href="/add-question">
-    <button type="button" class="button">Ask a question!</button>
-</a>
-<a href="/list">
-    <button type="button" class="button">All questions</button>
-</a>
-</div>
-<p>
+<h1>Ask mate 2.0</h1>
+<div class="searchbox">
     <form action="/search" method="get" >
     <input type="text" name="search_box" placeholder="What are you looking for?">
     <button type="submit">Search</button></a>
     </form>
-</p>
+</div>
+<table >
+    {% for question in list_of_questions %}
+        <tr align="center">
+            <td class="question-table"><a href="{{ url_for('route_question', question_id=question.id) }}">{{ question.title }}</a><br></td>
+        </tr>
+    {% endfor %}
+</table>
+<div class="align-center">
+<a href="/add-question">
+    <button type="button" class="button">Ask a question!</button>
+</a>
+<a href="/list">
+    <button type="button" class="button">All questions.</button>
+</a>
+</div>
 </body>
 </html>
