--- a/templates/list.html
+++ b/templates/list.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>List Questions</title>
-    <link rel="shortcut icon" href="static/logo.ico" />
+    <link rel="shortcut icon" href="/static/logo.ico" />
     <link rel="stylesheet" type="text/css" href="static/design.css">
 </head>
 <body>
 <h1>Questions:</h1>
-<div class="aligin-center">
+<div class="align-center">
 <a href="/list?criteria=submission_time&direction=ASC">
     <button type="button" class="button">Time A</button>
 </a>
@@ -35,7 +35,7 @@
         </tr>
     {% endfor %}
 </table>
-<div class="aligin-center">
+<div class="align-center">
 <a href="/add-question">
     <button type="button" class="button">Ask a question!</button>
 </a>
