--- a/templates/delete-question.html
+++ b/templates/delete-question.html
@@ -7,11 +7,10 @@
     <link rel="shortcut icon" href="/static/logo.ico" />
 
 </head>
-<a>
-    Do you really want to delete this question?
-    <br>
+<h1>Do you really want to delete this question?</h1>
+    <div class="align-center">
     <a href="/questions/{{question_id}}/delete?confirm=True"><button type="submit" class="button">YES</button></a>
     <a href="/questions/{{question_id}}"> <button type="button" class="button">NO</button></a>
-
+    </div>
 </body>
 </html>
