--- a/templates/add-answer.html
+++ b/templates/add-answer.html
@@ -19,11 +19,10 @@
         <td><input type="file" name="image"></td>
     </tr>
     <tr>
-        <td><button type="submit">Send!</button></td>
+        <td><button type="submit" class="button">Send!</button>
+        <a href="/questions/{{question_id}}"> <button type="button" class="button">Back to questions.</button></a></td>
     </tr>
     </form>
-    </table><br>
-    <a href="/questions/{{question_id}}"> <button type="button">Back to questions.</button></a>
-
+    </table>
 </body>
 </html>
