--- a/templates/list.html
+++ b/templates/list.html
@@ -30,14 +30,19 @@
 </div>
 <table>
     {% for question in list_of_questions %}
-        <tr>
-            <a href="{{ url_for('route_question', question_id=question.id) }}">{{ question.title }}</a><br>
+        <tr id="margin">
+        <td>
+                        <a href="{{ url_for('route_question', question_id=question.id) }}">{{ question.title }}</a><br>
+        </td>
         </tr>
     {% endfor %}
 </table>
 <div class="align-center">
 <a href="/add-question">
     <button type="button" class="button">Ask a question!</button>
+</a>
+<a href="/">
+    <button type="button" class="button">Go to homepage!</button>
 </a>
 </div>
 
