Add like and dislike button emoji

--- a/templates/list.html
+++ b/templates/list.html
@@ -10,22 +10,22 @@
 <h1>Questions:</h1>
 <div class="align-center">
 <a href="/list?criteria=submission_time&direction=ASC">
-    <button type="button" class="button">Time A</button>
+    <button type="button" class="button">Time ⇧</button>
 </a>
 <a href="/list?criteria=submission_time&direction=DESC">
-    <button type="button" class="button">Time D</button>
+    <button type="button" class="button">Time ⇩</button>
 </a>
 <a href="/list?criteria=vote_number&direction=ASC">
-    <button type="button" class="button">Vote number A</button>
+    <button type="button" class="button">Vote number ⇧</button>
 </a>
 <a href="/list?criteria=vote_number&direction=DESC">
-    <button type="button" class="button">Vote number D</button>
+    <button type="button" class="button">Vote number ⇩</button>
 </a>
 <a href="/list?criteria=view_number&direction=ASC">
-    <button type="button" class="button">View number A</button>
+    <button type="button" class="button">View number ⇧</button>
 </a>
 <a href="/list?criteria=view_number&direction=DESC">
-    <button type="button" class="button">View number D</button>
+    <button type="button" class="button">View number ⇩</button>
 </a>
 </div>
 <table>
