--- a/templates/edit-answer.html
+++ b/templates/edit-answer.html
@@ -19,11 +19,11 @@
         <td><input type="file" name="image"></td>
     </tr>
     <tr>
-        <td><button type="submit">Send!</button></td>
+        <td><button type="submit" class="button">Send!</button></td>
+        <td><a href="/questions/{{answer.question_id}}q"> <button type="button" class="button">Back to questions.</button></a></td>
     </tr>
     </form>
     </table><br>
-    <a href="/questions/{{answer.question_id}}.html"> <button type="button">Back to questions.</button></a>
 
 </body>
 </html>
