--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Ask a question:</h1>
-<table>
+<table id="input">
     <form action="" method="post">
 
         <tr>
@@ -21,18 +21,16 @@
         </tr>
         <tr>
             <td>Image:</td>
-            <td><input type="file" name="image"></td>
+            <td><input type="file" name="image" class="button"></td>
         </tr>
         <tr>
             <td>
-                <button type="submit" class="button">Send!</button>
+                <button type="submit" class="button">Send!</button><br>
+                <a href="/"><button type="button" class="button">Back to questions.</button></a>
             </td>
         </tr>
     </form>
 </table>
 <br>
-<a href="/">
-    <button type="button" class="button">Back to questions.</button>
-</a>
 </body>
 </html>
