--- a/templates/edit-answer.html
+++ b/templates/edit-answer.html
@@ -16,11 +16,11 @@
     </tr>
     <tr>
         <td>Image:</td>
-        <td><input type="file" name="image"></td>
+        <td><input type="file" name="image" class="button"></td>
     </tr>
     <tr>
-        <td><button type="submit" class="button">Send!</button></td>
-        <td><a href="/questions/{{answer.question_id}}q"> <button type="button" class="button">Back to questions.</button></a></td>
+        <td><button type="submit" class="button">Send!</button><br>
+        <a href="/questions/{{answer.question_id}}"> <button type="button" class="button">Back to questions.</button></a></td>
     </tr>
     </form>
     </table><br>
