add get comments from database

--- a/templates/question.html
+++ b/templates/question.html
@@ -63,7 +63,7 @@
             <a href="/answer/{{ item.question_id }}/{{ item.id }}/delete"><button type="button" class="button">Delete answer!</button></a>
         </td>
         <td class="topborder">
-            <a href="/question/{{ item.id }}/new-comment"><button type="button" class="button"> Add new comment!</button></a>
+            <a href="/answer/{{ item.id }}/new-comment"><button type="button" class="button"> Add new comment!</button></a>
         </td>
         <td class= "topborder">
             <a href="/answer/{{ item.question_id }}/{{ item.id }}/like"><button type="button" class="button">👍</button></a>
