add delete comment, and new comment for answers functions

--- a/templates/add-comment.html
+++ b/templates/add-comment.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="/static/logo.ico" />
 </head>
 <body>
-<h1>Add answer:</h1>
+<h1>Add comment:</h1>
     <table>
     <form action="" method="post">
     <tr>
