--- a/templates/home.html
+++ b/templates/home.html
@@ -35,6 +35,9 @@
 <a href="/add-question">
     <button type="button" class="button">Ask a question!</button>
 </a>
+<a href="/user-list">
+    <button type="button" class="button">Go to users!</button>
+</a>
 <a href="/list">
     <button type="button" class="button">All questions.</button>
 </a>
