--- a/templates/list.html
+++ b/templates/list.html
@@ -41,6 +41,9 @@
 <a href="/add-question">
     <button type="button" class="button">Ask a question!</button>
 </a>
+<a href="/user-list">
+    <button type="button" class="button">Go to users!</button>
+</a>
 <a href="/">
     <button type="button" class="button">Go to homepage!</button>
 </a>
